Wrote about cache effectiveness

--- a/sections/b.main/5.evaluation.tex
+++ b/sections/b.main/5.evaluation.tex
@@ -5,9 +5,9 @@ The evaluation of the proposed refinement and axiom weakening operator has been 
   \scriptsize
   \begin{widepage}
     \centering
-    \begin{tabular}{|lllrrrr|}
+    \begin{tabular}{|l|llrrrr|}
       \hline
-      Abbreviation & Name & Expressivity & Axioms & Concepts & Roles & Subconcepts \\
+      Abbreviation & Name & Expressivity & Axioms & Concepts & Roles & Subcon. \\
       \hline
       admin & Nurse Administrator & $\mathcal{ALCHOIF}$ & 229 & 42 & 29 & 144 \\
       ahso & Animal Health Surveillance Ontology & $\mathcal{ALCRIF}$ & 166 & 38 & 31 & 104 \\
