--- a/main.tex
+++ b/main.tex
@@ -1,9 +1,9 @@
 \documentclass[10pt,a4paper]{report}
 \usepackage{amsthm, amsfonts, amsmath, amssymb, mathtools}
+\usepackage{sectsty, csquotes, xcolor, xspace, pdflscape}
+\usepackage{graphicx, tabularx, changepage, multirow, subcaption}
 \usepackage[chapter]{algorithm}
 \usepackage{algpseudocode, listings}
-\usepackage{sectsty, csquotes, xcolor, xspace}
-\usepackage{graphicx, tabularx, changepage}
 \usepackage[hidelinks]{hyperref}
 \usepackage[capitalise]{cleveref}
 \usepackage[inline]{enumitem}
@@ -60,8 +60,8 @@
 \algnewcommand{\EndIIf}{\unskip\ \algorithmicend\ \algorithmicif}
 
 \newlength{\offsetpage}
-\setlength{\offsetpage}{1cm}
-\newenvironment{widepage}{
+\newenvironment{widepage}[1][1cm]{
+  \setlength{\offsetpage}{#1}
   \begin{adjustwidth}{-\offsetpage}{-\offsetpage}
   \addtolength{\textwidth}{2\offsetpage}
 }{\end{adjustwidth}}
@@ -80,6 +80,7 @@
 \date{July 2023}
 
 \def\maketitle{
+  \thispagestyle{empty}
   \begin{tabular}{ll}
     \multicolumn{2}{r}{\includegraphics[width=0.5\linewidth]{resources/unibz-logo.png}} \\
     \vspace*{40mm} \\
@@ -105,6 +106,7 @@
 \end{abstract}
 
 \tableofcontents
+\thispagestyle{empty}
 
 \begingroup
 \renewcommand{\abstractname}{Acknowledgements}
