Added the performance evaluation section

--- a/sections/b.main/3.theory/1.expressivity.tex
+++ b/sections/b.main/3.theory/1.expressivity.tex
@@ -20,4 +20,4 @@ Firstly, the covers and refinement operators for roles are defined to operate on
 
 For this reason, we give to the upward and downward cover as an argument not only the reference ontology $\Omcref$, but also the full ontology $\Omcfull$. The same must be done for the axiom weakening operator that uses the cover functions. Both $\Omcref$ and $\Omcfull$ share the same vocabulary $N_I$, $N_C$, and $N_R$. We assume that all roles that are simple in $\Omcfull$ are also simple in $\Omcref$. While this is not strictly required, it will be true for all algorithms shown in this thesis that $\Omcref \subseteq \Omcfull$. In the context of repairing ontologies, $\Omcfull$ can be chosen to be the unmodified ontology that we want to repair.
 
-
+% TODO
