--- a/sections/b.main/4.implementation/1.prototype.tex
+++ b/sections/b.main/4.implementation/1.prototype.tex
@@ -69,4 +69,5 @@ For actually computing subsumptions between roles, \textsc{TestSubsumtion($C, D$
   C \sqsubseteq_\Omc D_i \text{ for some } i \in \{ 1, \dots, n \} &\implies C \sqsubseteq_\Omc D_1 \sqcup \cdots \sqcup D_n \\
 \end{align*}
 
+% TODO
 
