--- a/sections/b.main/5.evaluation/1.quality.tex
+++ b/sections/b.main/5.evaluation/1.quality.tex
@@ -90,3 +90,5 @@ This process, both making the ontology inconsistent and repairing it, was repeat
 The results of the evaluation suggest that the repair by weakening is on average about as good or better than the repair by removal of axioms. While this supports the conclusion in \cite{troquard2018repairing} that weakening is able to retain more information than removal, the observed advantage was worse than what has been observed in \cite{troquard2018repairing}.
 
 In contrast, it can be seen that the repair using weakening is not in general better than choosing a random maximal consistent subset. There are ontologies for which the repairs by weakening are on average significantly worse when comparing using IIC. This is, however, a somewhat unequal comparison. We have seen in \cref{ex:alc-weakening} also a situation in which weakening performs worse when it comes to preserving information compared to choosing a maximally consistent subset. An alternative repair algorithm could start with a maximal consistent subset and use weakening to add in more information from the remaining axioms. Still, this result suggests that the heuristic used for selecting bad axioms is not reliable for preserving information, at least with respect to the chosen measure. Also, it has not been closely studied what causes the repair by weakening to significantly lose for some ontologies, while being clearly preferred in others. Interestingly there are also some cases in which the weakening based repair performs better against a random maximal consistent subset than against the repair by removal.
+
+% TODO
