--- a/sections/c.back/f.eval.tex
+++ b/sections/c.back/f.eval.tex
@@ -28,7 +28,7 @@
       \centering
       \includegraphics[width=\textwidth]{resources/iic-mcs-ontology-violin.png}
     \end{widepage}
-    \caption{Distribution of IIC with respect to repair via a random maximal consistent per ontology.}
+    \caption{Distribution of IIC with respect to repair via a random maximal consistent subset per ontology.}
 \end{figure}
 
 \begin{figure}[ht]
