--- a/sections/b.main/3.theory/2.rbox.tex
+++ b/sections/b.main/3.theory/2.rbox.tex
@@ -4,3 +4,4 @@ When it comes to refining the left-hand side of RIAs, we do not need any special
 
 A more interesting question is whether such a weakening may still cause a non-regular RBox. The main insight is that simple roles are always allowed on the left-hand side of a RIA. While this is more directly evident in some alternative definitions of regularity (e.g., \cite{rudolph2011foundations}) it is not so apparent from the one presented in this paper. Intuitively, the constraints given in \cref{sroiq-syntax} for regularity disallow dependency cycles that contain complex RIAs. Simple roles cannot be part of such a cycle, since the cycle must contain at least one complex RIA to be a violation of the constraint, and all roles that depend in this sense on a complex RIA must be non-simple. A more formal justification for this fact is given in the \hyperref[proof:regularity]{proof} for \cref{lem:regularity}. Since all refinements of the left-hand side of RIAs are performed using simple roles, these cannot lead to a non-regular RBox. Further, refinements of the super role of RIAs are only performed on simple RIAs $S \sqsubseteq R$ where $S$ is a simple role. Since $S$ is simple in this case, all refinements of $R$ are allowed, potentially also if the refinement yielded a non-simple role.
 
+% TODO
