--- a/sections/b.main/5.evaluation.tex
+++ b/sections/b.main/5.evaluation.tex
@@ -42,7 +42,7 @@ Since the ontologies use OWL 2, the axioms and concepts do not map directly to \
 
 Claims about runtime should generally only be used for relative comparisons and rough estimates. While they will obviously vary greatly based on hardware choices, all evaluations here have been performed on an Intel Coffee Lake system running at around 4GHz for the duration of the experiment. Unless otherwise indicated, the FaCT++ reasoner \cite{tsarkov2006fact++,factpp} was used for evaluation.
 
-\section{Evaluating the Quality of Repairs}
+\section{Evaluating the Quality of Repairs}\label{eval-quality}
 
 \input{sections/b.main/5.evaluation/1.quality.tex}
 
